--- a/src/pages/chessboard/components/Board.css
+++ b/src/pages/chessboard/components/Board.css
@@ -1,5 +1,4 @@
-/* Chessboard.css */
-.chessboard {
+.board {
   display: grid;
   grid-template-columns: repeat(8, 70px);
   grid-template-rows: repeat(8, 70px);
